# GaoKao-bench

./: .gitignore  README.md  grades_summary.xlsx  pyproject.toml  review.html  serve_review.py  summarize_grades.py
configs/models/: judge.json  target.json
configs/visual_extractors/: codex.json  vlm_command.example.json
configs/visual_extractors/prompts/: answer_transcription.md  content_transcription.md  segmentation.md
data/results/grades/: GLM 5.1.2026-national-i-math.jsonl  GLM 5.1.2026-national-ii-math.jsonl  GPT-5.5.2026-national-i-math.jsonl  GPT-5.5.2026-national-ii-math.jsonl  claude-opus-4.6.2026-national-i-math.jsonl  claude-opus-4.6.2026-national-ii-math.jsonl  deepseek-v4-flash.2026-national-i-math.jsonl  deepseek-v4-flash.2026-national-ii-math.jsonl  deepseek-v4-pro.2026-national-i-math.jsonl  deepseek-v4-pro.2026-national-ii-math.jsonl  doubao-seed-2-0-lite-260428.2026-national-i-math.jsonl  doubao-seed-2-0-lite-260428.2026-national-ii-math.jsonl  doubao-seed-2-0-pro-260215.2026-national-i-math.jsonl  doubao-seed-2-0-pro-260215.2026-national-ii-math.jsonl  gemini-3.1-pro-preview.2026-national-i-math.jsonl  gemini-3.1-pro-preview.2026-national-ii-math.jsonl  kimi-k2.6.2026-national-i-math.jsonl  kimi-k2.6.2026-national-ii-math.jsonl
data/results/runs/: GLM 5.1.2026-national-i-math.jsonl  GLM 5.1.2026-national-ii-math.jsonl  GPT-5.5.2026-national-i-math.jsonl  (+15 more)
data/reviewed/: 2026-national-i-math.jsonl  2026-national-ii-math.jsonl
scripts/: extract_papers.py  grade.py  run_eval.py  validate_jsonl.py
src/gaokao_bench/: __init__.py  io.py
(+13 files in other folders)
