[project]
name = "gaokao-bench"
version = "0.1.0"
description = "Lightweight Gaokao model evaluation and grading workspace."
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
extraction = [
  "PyMuPDF>=1.27",
  "pypdf>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gaokao_bench"]

[tool.pytest.ini_options]
pythonpath = ["src"]
